bin/testsuite/tests/compiler/src/errors/compiler2216.swg
#global testerror "Err0108"

#[Swag.Inline]
func toto() => 0

func titi()->s32
{
    toto()
}
